tests/build/cases/widget_new/property_generic2.stderr
error[E0277]: the trait bound `{integer}: IntoVar<bool>` is not satisfied
   --> cases/widget_new/property_generic2.rs:6:23
    |
6   |         value<bool> = 0;
    |                       ^ the trait `IntoVar<bool>` is not implemented for `{integer}`
    |
    = help: the following other types implement trait `IntoVar<T>`:
              <f32 as IntoVar<CornerRadius>>
              <f32 as IntoVar<Factor>>
              <f32 as IntoVar<GridSpacing>>
              <f32 as IntoVar<SideOffsets>>
              <f32 as IntoVar<Vector>>
              <f32 as IntoVar<zero_ui::prelude::GradientStop>>
              <f32 as IntoVar<zero_ui::prelude::Length>>
              <f32 as IntoVar<zero_ui::prelude::Size>>
            and 15 others
note: required by a bound in `value_ArgsImpl::<T, T_value>::new`
   --> $WORKSPACE/zero-ui/src/widgets/toggle_wgt.rs
    |
    |     pub fn value<T: VarValue + PartialEq>(child: impl UiNode, value: impl IntoVar<T>) -> impl UiNode {
    |                                                                           ^^^^^^^^^^ required by this bound in `value_ArgsImpl::<T, T_value>::new`
